--- a/app/templates/deanPart/deanProfile.html
+++ b/app/templates/deanPart/deanProfile.html
@@ -4,58 +4,61 @@
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
-        <div class="form-left">
-            <label>Full Name as per IC</label>
-            <input type="text" name="username" value="{{ dean_name }}" readonly><br>
-            
-            <label>Staff ID</label>
-            <input type="text" name="userid" value="{{ dean_id }}" readonly><br>
+        <div class="profile-frame">
+            <div class="form-left">
+                <label>Full Name as per IC</label>
+                <input type="text" name="username" value="{{ dean_name }}" readonly><br>
+                
+                <label>Staff ID</label>
+                <input type="text" name="userid" value="{{ dean_id }}" readonly><br>
 
-            <label>Email Address</label>
-            <input type="text" name="email" value="{{ dean_email }}" readonly><br>
+                <label>Email Address</label>
+                <input type="text" name="email" value="{{ dean_email }}" readonly><br>
 
-            <label>Role Based</label>
-            <input type="text" name="role", value="{{ dean_role_text}}" readonly><br>
-        </div>
-        <div class="form-right">
-            <label>Department</label>
-            <input type="text" name="department", value="{{ dean_department_text}}" readonly><br>
-
-            <label>Contact Number</label>
-            <input type="tel" name="contact" value="{{ dean_contact_text }}"><br>  
-
-            <div class="password-container">
-                <label>Password</label> 
-                <input type="password" name="password1" value="{{ dean_password1_text }}">
-                <button type="button" class="toggle-password-btn">
-                    <i class="fas fa-eye"></i>
-                </button>
-            </div><br>
-
-            <div class="password-container">
-                <label> Confirm Password</label>
-                <input type="password" name="password2" value="{{ dean_password2_text }}">
-                <button type="button" class="toggle-password-btn">
-                    <i class="fas fa-eye"></i>
-                </button>
+                <label>Role Based</label>
+                <input type="text" name="role", value="{{ dean_role_text}}" readonly><br>
             </div>
+            <div class="form-right">
+                <label>Department</label>
+                <input type="text" name="department", value="{{ dean_department_text}}" readonly><br>
+
+                <label>Contact Number</label>
+                <input type="tel" name="contact" value="{{ dean_contact_text }}"><br>  
+
+                <div class="password-container">
+                    <label>Password</label> 
+                    <input type="password" name="password1" value="{{ dean_password1_text }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div><br>
+
+                <div class="password-container">
+                    <label> Confirm Password</label>
+                    <input type="password" name="password2" value="{{ dean_password2_text }}">
+                    <button type="button" class="toggle-password-btn">
+                        <i class="fas fa-eye"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <br>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <br>
+        <div class="button-wrapper">
+                <button type="submit">Submit</button>
         </div>
     </form>
         
-    <br>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-                <strong>{{ category.capitalize() }}:</strong> {{ message }}
-            </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    <br>
-    <div class="button-wrapper">
-            <button type="submit">Submit</button>
-    </div>
+
 </div>
 {% endblock %}
 
