--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -274,6 +274,8 @@ html, body {
 form {
     padding: 20px;
     border-radius: 10px;    
+    border: 2px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .profile-frame{
