--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -460,14 +460,16 @@ h2 {
 
 
 .alert {
+    width: 35%;
     text-align: center;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    
+    background-color: #d4edda;
 }
 
 .alert-success {
-    background-color: #d4edda;
     color: #155724;
 }
 
