--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -465,7 +465,7 @@ h2 {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
-    
+    margin: auto 0;
     background-color: #d4edda;
 }
 
