--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -466,15 +466,16 @@ h2 {
     margin-bottom: 10px;
     border-radius: 5px;
     margin: 0 auto;
-    background-color: #d4edda;
 }
 
 .alert-success {
+    background-color: #d4edda;
     color: #155724;
 }
 
 
 .alert-error, .alert-input_error {
+    background-color: #f8d7da;
     color: #721c24;
 }
 
