--- a/app/templates/lecturerPart/lecturerInvigilationTimetable.html
+++ b/app/templates/lecturerPart/lecturerInvigilationTimetable.html
@@ -1,9 +1,9 @@
 <!-- upload.html -->
 {% extends "lecturerPart/lecturerBase.html" %}
-{% block title %}Lecturer InvigilationTimetable{% endblock %}
+{% block title %}Lecturer InvigilationTimetabl{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Timetables</h2>
+    <h2>Invigilation Timetable</h2>
 
     <div class="user-table-container">
         <table class="user-data-table">
