--- a/app/templates/lecturerPart/lecturerTimetable.html
+++ b/app/templates/lecturerPart/lecturerTimetable.html
@@ -3,7 +3,7 @@
 {% block title %}Lecturer Timetable{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Timetables</h2>
+    <h2>Timetable</h2>
 
     <div class="user-table-container">
         <table class="user-data-table">
