--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -53,6 +53,9 @@
                     <th>Lecturer</th>
                     <th>No. of Students</th>
                     <th>Room</th>
+                    <th>Invigilator 1</th>
+                    <th>Invigilator 2</th>
+                    <th>Backup Invigilator</th>
                 </tr>
             </thead>
             <tbody>
