--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -474,7 +474,7 @@ h2 {
     color: #155724;
 }
 
-.alert-error, .alert-input_error {
+.alert-error {
     background-color: #f8d7da;
     color: #721c24;
 }  
