--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -44,9 +44,13 @@
                     <i class="fas fa-calendar-alt"></i>
                     <span>Generate Schedule</span>
                 </a>
-                <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_managetab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
                     <i class="fas fa-chalkboard-teacher"></i>
                     <span>Manage Lecturer</span>
+                </a>
+                <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <span>Manage Department</span>
                 </a>
                 <a href="{{ url_for('admin_viewReport') }}" class="tab-link {% if active_tab == 'admin_viewReporttab' %}active{% endif %}">
                     <i class="fas fa-file"></i>
