--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -102,6 +102,18 @@
             </ul>
         </li>
     </div>
+
+    <div class="menu-section">
+        <!--   <h2>Upload File</h2><br>  -->
+        <a href="{{ url_for('admin_manageDepartment')}}" style="text-decoration: none;"><h2>Manage Department</h2></a>
+        <li class="submenu">
+            <strong>  Purpose:</strong>
+            <ul>    
+                <li>Upload merged lecturer schedule files</li>
+                <li>Access and review combined lecturer timetables</li>
+            </ul>
+        </li>
+    </div>
 </div>
 {% endblock %}
 
