--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -8,16 +8,19 @@
     <h2>Manage Department</h2>
     <form method="POST">
         <h2>Add New Department</h2>
-        <div class="form-left">
-            <label>Department Code</label>
-            <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
+        <div class="profile-frame">
+            <div class="form-left">
+                <label>Department Code</label>
+                <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
+            </div>
+            <div class="form-right">
+                <label>Department Name</label>
+                <input type="text" name="departmentName" value="{{ departmentName_text }}">
+            </div>
         </div>
-        <div class="form-right">
-            <label>Department Name</label>
-            <input type="text" name="departmentName" value="{{ departmentName_text }}">
-        </div>
+        
 
-        <!-- Submit button -->
+        <!-- Submit button -->  
         <div class="button-wrapper">
             <button type="submit">Add New</button>
         </div>
