--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -18,11 +18,19 @@
                 <input type="text" name="departmentName" value="{{ departmentName_text }}">
             </div>
         </div>
-        
-
-        <!-- Submit button -->  
+        <br>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <br>
         <div class="button-wrapper">
-            <button type="submit">Add New</button>
+                <button type="submit">Submit</button>
         </div>
     </form>
 
