--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -9,11 +9,11 @@
     <form method="POST">
         <h2>Add New Department</h2>
         <div class="profile-frame">
-            <div class="form-left">
+            <div class="form-left" style="width: 35%">
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
             </div>
-            <div class="form-right">
+            <div class="form-right" style="width: 35%"></div>
                 <label>Department Name</label>
                 <input type="text" name="departmentName" value="{{ departmentName_text }}">
             </div>
@@ -33,7 +33,7 @@
                 <button type="submit">Submit</button>
         </div>
     </form>
-    <br><br>
+    <br>
 
 
 
