--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -13,7 +13,7 @@
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
             </div>
-            <div class="form-right" style="width: 35%"></div>
+            <div class="form-right" style="width: 35%">
                 <label>Department Name</label>
                 <input type="text" name="departmentName" value="{{ departmentName_text }}">
             </div>
