--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -40,16 +40,13 @@
                 <input type="tel" name="contact" value="{{ contact_text }}"><br> 
 
                 <label id="departmentLabel">Department</label>
-                <select name="department" value="{{ department_text }}">
+                <select name="department" required>
                     <option value="" disabled selected>Select Department</option>
-                    <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
-                    <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
-                    <option value="CEPS - CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES">(CEPS) CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES</option>
-                    <option value="LCMPU - LANGUAGE CENTRE">(LCMPU) LANGUAGE CENTRE</option>
-                    <option value="SOBIZ - SCHOOL OF BUSINESS">(SOBIZ) SCHOOL OF BUSINESS</option>
-                    <option value="SOC - SCHOOL OF COMPUTING">(SOC) SCHOOL OF COMPUTING</option>
-                    <option value="SOE - SCHOOL OF ENGINEERING">(SOE) SCHOOL OF ENGINEERING</option>
-                    <option value="SOHOS - SCHOOL OF HOSPITALITY AND CULINARY ARTS">(SOHOS) SCHOOL OF HOSPITALITY AND CULINARY ARTS</option>
+                    {% for dept in departments %}
+                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                        </option>
+                    {% endfor %}
                 </select>
             </div>
     
