--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -42,7 +42,7 @@
                 <label id="departmentLabel">Department</label>
                 <select name="department" required>
                     <option value="" disabled selected>Select Department</option>
-                    {% for dept in departments %}
+                    {% for dept in department_data %}
                         <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
                             ({{ dept.departmentCode }}) {{ dept.departmentName }}
                         </option>
