--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -96,11 +96,13 @@ button {
 }  
 
 
-
 .alert {
+    width: 35%;
+    text-align: center;
     padding: 10px;
-    margin-top: 15px;
+    margin-bottom: 10px;
     border-radius: 5px;
+    margin: 0 auto;
 }
 
 .alert-success {
@@ -111,7 +113,10 @@ button {
 .alert-error {
     background-color: #f8d7da;
     color: #721c24;
-}   
+}  
+
+
+
 
 
 .toggle-password-btn {
