--- a/app/templates/frontPart/login.html
+++ b/app/templates/frontPart/login.html
@@ -43,14 +43,15 @@
             </div>
             <br>
             
-            <!-- Show any message of doesn't match the require of input -->
-            <div>
-                {% if error_message and request.method == 'POST' %}
-                <div class="alert">
-                    <strong>Error:</strong> {{ error_message }}
-                </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                    {% endfor %}
                 {% endif %}
-            </div>
+            {% endwith %}
             
             <!-- Javascript control the password toggle -->
             <script src="{{ url_for('static', filename='js/function.js') }}"></script>
