--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -19,25 +19,33 @@
 <div class="menu-section">
     <h2>Generate Exam Schedule</h2> 
     <h3>Insert With The Ratio For Each Department</h3>
-    <div class="profile-frame">
-        <div class="form-left">
-            <label id="departmentLabel">Department</label>
-            <select name="department" value="{{ department_text }}">
-                <option value="" disabled selected>Select Department</option>
-                <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
-                <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
-                <option value="CEPS - CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES">(CEPS) CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES</option>
-                <option value="LCMPU - LANGUAGE CENTRE">(LCMPU) LANGUAGE CENTRE</option>
-                <option value="SOBIZ - SCHOOL OF BUSINESS">(SOBIZ) SCHOOL OF BUSINESS</option>
-                <option value="SOC - SCHOOL OF COMPUTING">(SOC) SCHOOL OF COMPUTING</option>
-                <option value="SOE - SCHOOL OF ENGINEERING">(SOE) SCHOOL OF ENGINEERING</option>
-                <option value="SOHOS - SCHOOL OF HOSPITALITY AND CULINARY ARTS">(SOHOS) SCHOOL OF HOSPITALITY AND CULINARY ARTS</option>
-            </select>
+    <form method="POST">
+        <div class="profile-frame">
+            <div class="form-left">
+                <select name="department" required>
+                    <option value="" disabled selected>Select Department</option>
+                    {% for dept in department_data %}
+                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                        </option>
+                    {% endfor %}
+                </select>
+                <input type="number" name="ratio" value="{{ ratio_text }}"><br>
+            </div>
+            <div class="form-right">
+                <select name="department" required>
+                    <option value="" disabled selected>Select Department</option>
+                    {% for dept in department_data %}
+                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                        </option>
+                    {% endfor %}
+                </select>
+                <input type="number" name="ratio" value="{{ ratio_text }}"><br>
+            </div>
         </div>
-        <div class="form-right">
+    </form>
 
-        </div>
-    </div>
 
 
 
