--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -13,9 +13,13 @@
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
             </div>
-            <div class="form-right" style="width: 35%">
+            <div class="form-middle" style="width: 35%">
                 <label>Department Name</label>
                 <input type="text" name="departmentName" value="{{ departmentName_text }}">
+            </div>
+            <div class="form-right" style="width: 35%">
+                <label>Department Ratio (Optional)</label>
+                <input type="number" name="departmentRatio" value="{{ departmentRatio_text }}">
             </div>
         </div>
         <br>
@@ -33,7 +37,7 @@
                 <button type="submit">Submit</button>
         </div>
     </form>
-    <br>
+    <br><br>
 
 
 
@@ -45,6 +49,7 @@
                     <th>No</th>
                     <th>Department Code</th>
                     <th>Department Name</th>
+                    <th>Department Ratio</th>
                 </tr>
             </thead>
             <tbody>
@@ -53,6 +58,7 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.departmentCode }}</td>
                     <td>{{ row.departmentName }}</td>
+                    <td>{{ row.departmentRatio }}</td>
                 {% endfor %}
             </tbody>
         </table>
