--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -11,11 +11,11 @@
         <div class="profile-frame">
             <div class="form-left" style="width: 35%">
                 <label>Department Code</label>
-                <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
+                <input type="text" name="departmentCode" value="{{ departmentCode_text }}"><br>
             </div>
             <div class="form-middle" style="width: 35%">
                 <label>Department Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}">
+                <input type="text" name="departmentName" value="{{ departmentName_text }}"><br>
             </div>
             <div class="form-right" style="width: 35%">
                 <label>Department Ratio (Optional)</label>
