--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -18,19 +18,34 @@
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
     <h2>Generate Exam Schedule</h2> 
-    <h3>Insert With The Ratio For Each Department</h3>
-    <form method="POST">
+    <form method="POST">  
+        <h3>Insert With The Ratio For Each Department</h3>
         <div class="profile-frame">
             <div class="form-left">
-                <select name="department" required>
-                    <option value="" disabled selected>Select Department</option>
-                    {% for dept in department_data %}
-                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                        </option>
-                    {% endfor %}
-                </select>
+                <label>Departments:</label><br>
+                {% for dept in department_data %}
+                    <label>
+                        ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                    </label><br>
+                {% endfor %}
                 <input type="number" name="ratio" value="{{ ratio_text }}"><br>
+            </div>
+
+            <div class="form-left">
+                <div class="form-right">
+                    <label>Departments:</label><br>
+                    {% for dept in department_data %}
+                        <label>
+                            ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                        </label><br>
+                    {% endfor %}
+                </div>
+                <div class="form-left">
+                    <input type="number" name="ratio" value="{{ ratio_text }}"><br>
+                </div>     
+            </div>
+
+                
             </div>
             <div class="form-right">
                 <select name="department" required>
