--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -23,7 +23,7 @@
         <div class="profile-frame">
             {% for dept in department_data %}
                 <label>{{ dept.departmentCode }} - {{ dept.departmentName }}</label>
-                <input type="number" name="ratio" value="{{ ratio_text }}">
+                <input type="number" name="ratio" value="{{ ratio_text }}"><br>
             {% endfor %}
         </div>
         <!-- Submit button -->
