--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -20,20 +20,30 @@
     <h2>Generate Exam Schedule</h2> 
     <form method="POST">  
         <h3>Insert With The Ratio For Each Department</h3>
-        <div style="display: flex; flex-wrap: wrap; gap: 20px; width: 70%; margin: auto;">
-            {% for dept in department_data %}
-                <div style="flex: 1 1 45%;">
-                    <label>{{ dept.departmentCode }} - {{ dept.departmentName }}</label>
-                    <input type="number" name="ratio" value="{{ ratio_text }}">
-                </div>
-            {% endfor %}
-        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Department</th>
+                    <th>Ratio</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for dept in department_data %}
+                <tr>
+                    <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
+                    <td>
+                        <input type="number" name="ratio" value="{{ ratio_text }}">
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
-        <!-- Submit button -->
-        <div class="button-wrapper">
-            <button type="submit">Upload</button>
-        </div>
-    </form>
+            <!-- Submit button -->
+            <div class="button-wrapper">
+                <button type="submit">Upload</button>
+            </div>
+        </form>
 
 
 
