--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -19,31 +19,58 @@
 <div class="menu-section">
     <h2>Generate Exam Schedule</h2> 
     <form method="POST">  
-        <h3>Insert With The Ratio For Each Department</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>Department</th>
-                    <th>Ratio</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for dept in department_data %}
-                <tr>
-                    <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
-                    <td>
-                        <input type="number" name="ratio" value="{{ ratio_text }}">
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-            <!-- Submit button -->
-            <div class="button-wrapper">
-                <button type="submit">Upload</button>
+        <h3>Insert With The Ratio For Each Department</h3><br>
+        <div style="display: flex; justify-content: space-between;">
+            <!-- Left Table -->
+            <div style="width: 48%;">
+                <table>
+                    <thead> 
+                        <tr>
+                            <th>Department</th>
+                            <th>Ratio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for dept in department_data[:department_data|length//2] %}
+                        <tr>
+                            <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
+                            <td>
+                                <input type="number" name="ratio" value="{{ ratio_text }}">
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </form>
+
+            <!-- Right Table -->
+            <div style="width: 48%;">
+                <table>
+                    <thead> 
+                        <tr>
+                            <th>Department</th>
+                            <th>Ratio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for dept in department_data[department_data|length//2:] %}
+                        <tr>
+                            <td>{{ dept.departmentCode }} - {{ dept.departmentName }}</td>
+                            <td>
+                                <input type="number" name="ratio" value="{{ ratio_text }}">
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Submit button -->
+        <div class="button-wrapper">
+            <button type="submit">Upload</button>
+        </div>
+    </form>
 
 
 
