--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -17,7 +17,7 @@
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Generate Exam Schedule</h2> 
+    <h2>Generate Exam Schedule</h2>     
     <form method="POST">  
         <h3>Insert With The Ratio For Each Department</h3><br>
         <div style="display: flex; justify-content: space-between;">
@@ -65,12 +65,22 @@
                 </table>
             </div>
         </div>
-
-        <!-- Submit button -->
+        <br>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <br>
         <div class="button-wrapper">
-            <button type="submit">Upload</button>
+                <button type="submit">Submit</button>
         </div>
     </form>
+    <br><br>
 
 
 
