--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -20,9 +20,9 @@
     <h2>Generate Exam Schedule</h2>     
     <form method="POST">  
         <h3>Insert With The Ratio For Each Department</h3><br>
-        <div style="display: flex; justify-content: space-between;">
+        <div style="width: 80%;display: flex;justify-content: space-between;margin: auto;gap: 5%;">
             <!-- Left Table -->
-            <div style="width: 48%;">
+            <div>
                 <table>
                     <thead> 
                         <tr>
@@ -44,7 +44,7 @@
             </div>
 
             <!-- Right Table -->
-            <div style="width: 48%;">
+            <div>
                 <table>
                     <thead> 
                         <tr>
@@ -82,9 +82,6 @@
     </form>
     <br><br>
 
-
-
-    <br><br>
     <h3>List of All Exam Sessions Details</h3>
     <div class="user-table-container">
         <table class="user-data-table">
