--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -50,7 +50,7 @@ label {
 }
 
 input, select {
-    width: 25vh;
+    width: 100%;
     padding: 10px;
     margin: 1% 0;
     box-sizing: border-box;
