--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -33,6 +33,7 @@ form {
 }
 
 .form-left, .form-right, .form-middle {
+    width: 30%;
     display: flex;
     flex-direction: column;
 }
@@ -47,7 +48,7 @@ form {
 label {
     text-align: left;
     margin-bottom: 5px;
-}
+}   
 
 input, select {
     width: 100%;
