--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -19,7 +19,7 @@
 <div class="menu-section">
     <h2>Generate Exam Schedule</h2>     
     <form method="POST">  
-        <h3>Insert With The Ratio For Each Department</h3><br>
+        <h3>Insert the Ratio For Each Department</h3><br>
         <div style="width: 80%;display: flex;justify-content: space-between;margin: auto;gap: 5%;">
             <!-- Left Table -->
             <div>
