--- a/app/templates/adminPart/adminAutoSchedule.html
+++ b/app/templates/adminPart/adminAutoSchedule.html
@@ -17,7 +17,8 @@
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Generate Exam Schedule</h2>     
+    <h2>Generate Exam Schedule</h2> 
+    <label>Check this part, whether each admin able to select for all or just under self</label>    
     <form method="POST">  
         <h3>Insert the Ratio For Each Department</h3><br>
         <div style="width: 80%;display: flex;justify-content: space-between;margin: auto;gap: 5%;">
