--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -37,7 +37,7 @@
                 <input type="text" name="email" value="{{ email_text }}"><br>
                 
                 <label>Contact Number</label>
-                <input type="tel" name="contact" value="{{ contact_text }}"><br> 
+                <input type="text" name="contact" value="{{ contact_text }}"><br> 
 
                 <label id="departmentLabel">Department</label>
                 <select name="department" required>
