--- a/app/templates/frontPart/login.html
+++ b/app/templates/frontPart/login.html
@@ -27,14 +27,14 @@
         
         <div class="form-container">
             <!-- Frame for Email Address container -->
-            <div class="input-container">
+            <div class="input-container" style="width: 50%;">
                 <label>Email Address</label>
                 <input type="email" name="textbox" value="{{ login_text }}">
             </div>
             <br>
         
             <!-- Frame for Enter Password container -->
-            <div class="password-container">
+            <div class="password-container" style="width: 50%;">
                 <label>Password</label>
                 <input type="password" name="password" value="{{ password_text }}">
                 <button type="button" class="toggle-password-btn">
