--- a/app/templates/frontPart/resetPassword.html
+++ b/app/templates/frontPart/resetPassword.html
@@ -24,7 +24,7 @@
         <br>
 
         <div class="form-container">
-            <div class="password-container">
+            <div class="password-container" style="width: 50%;">
                 <label>Password</label>
                 <input type="password" name="password1" value="{{ password_text_1 }}">
                 <button type="button" class="toggle-password-btn">
@@ -32,7 +32,7 @@
                 </button>
             </div><br>
 
-            <div class="password-container">
+            <div class="password-container" style="width: 50%;">
                 <label> Confirm Password</label>
                 <input type="password" name="password2" value="{{ password_text_2 }}">
                 <button type="button" class="toggle-password-btn">
