--- a/app/templates/frontPart/forgotPassword.html
+++ b/app/templates/frontPart/forgotPassword.html
@@ -12,7 +12,7 @@
         <div class="heading"></div>
         <br>
         <h1>Forgot Password</h1>
-        <h4><span class="span">Please input your email address to\nproceed with resetting your password.</span></h4>
+        <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br>
         <!-- Main container allocate in centre -->
         <div class="form-container">
