--- a/app/templates/frontPart/resetPassword.html
+++ b/app/templates/frontPart/resetPassword.html
@@ -38,7 +38,7 @@
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
-            </div>
+            </div><br>
         
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
