--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -5,7 +5,7 @@
     <h2>Upload Course Details</h2>
     <form id="uploadCourseForm" action="{{ url_for('admin_uploadCourseDetails') }}" method="POST" enctype="multipart/form-data">
         <div class="profile-frame">
-            <div class="form-left">
+            <div class="form-left" style="margin: auto;">
                 <label for="course_list">
                     <div class="upload-container">
                         <div class="upload-text">Upload file format with according format
@@ -19,12 +19,18 @@
             </div>
 
             <div class="form-right">
-                <label>Course Code</label>
-                <input type="text" name="departmentCode" value="{{ departmentCode_text }}"><br>
-                <label>Course Name</label>
-                <input type="text" name="departmentName" value="{{ departmentName_text }}"><br>
-                <label>Course Credit Hours</label>
-                <input type="number" name="departmentRatio" value="{{ departmentRatio_text }}">
+                <div class="profile-frame">
+                    <div class="form-left">
+                        <label>Course Code</label><br>
+                        <label>Course Name</label><br>
+                        <label>Course Credit Hours</label>
+                    </div>
+                    <div class="form-right">
+                        <input type="text" name="courseCode" value="{{ courseCode_text }}"><br>
+                        <input type="text" name="courseName" value="{{ courseName_text }}"><br>
+                        <input type="number" name="courseHour" value="{{ courseHour_text }}">
+                    </div>
+                </div>
             </div>
         </div>
 
