--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -19,18 +19,24 @@
             </div>
 
             <div class="form-right">
-                <div class="profile-frame">
-                    <div class="form-left">
-                        <label>Course Code</label><br>
-                        <label>Course Name</label><br>
-                        <label>Course Credit Hours</label>
-                    </div>
-                    <div class="form-right">
-                        <input type="text" name="courseCode" value="{{ courseCode_text }}"><br>
-                        <input type="text" name="courseName" value="{{ courseName_text }}"><br>
-                        <input type="number" name="courseHour" value="{{ courseHour_text }}">
-                    </div>
-                </div>
+                <table>
+                    <tr>
+                        <th>Field</th>
+                        <th>Input</th>
+                    </tr>
+                    <tr>
+                        <td><label for="courseCode">Course Code</label></td>
+                        <td><input type="text" name="courseCode" value="{{ courseCode_text }}"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="courseName">Course Name</label></td>
+                        <td><input type="text" name="courseName" value="{{ courseName_text }}"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="courseHour">Course Credit Hours</label></td>
+                        <td><input type="number" name="courseHour" value="{{ courseHour_text }}"></td>
+                    </tr>
+                </table>
             </div>
         </div>
 
